--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -41,7 +41,7 @@
 
             <ng-container matColumnDef="created">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
-              <td mat-cell *matCellDef="let fileUpload"> {{ fileUpload.added | date }} </td>
+              <td mat-cell *matCellDef="let fileUpload"> {{ fileUpload.timestampCreated | date }} </td>
             </ng-container>
 
             <ng-container matColumnDef="options">
