--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -9,7 +9,7 @@
               <mat-form-field appearance="{{ generalContent.formStyle }}" color="{{ generalContent.formColor }}" class="w-100">
                 <mat-label>Naam</mat-label>
                 <input matInput type="text" [(ngModel)]="model.name" name="name" id="name" #name="ngModel" required />
-                <mat-error [hidden]="name.valid || name.pristine">
+                <mat-error *ngIf="name.invalid">
                   Naam is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
@@ -20,7 +20,7 @@
                 <mat-label>Email</mat-label>
                 <input matInput type="email" placeholder="info@example.com" [(ngModel)]="model.email" name="email"
                   id="email" #email="ngModel" required />
-                <mat-error [hidden]="email.valid || email.pristine">
+                <mat-error *ngIf="email.invalid">
                   Email is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
@@ -32,7 +32,7 @@
                 <mat-select [(ngModel)]="model.subject" name="subject" id="subject" #subject="ngModel" required>
                   <mat-option *ngFor="let subject of generalContent.contactformCategories" [value]="subject">{{ subject }}</mat-option>
                 </mat-select>
-                <mat-error [hidden]="subject.valid || subject.pristine">
+                <mat-error *ngIf="subject.invalid">
                   Onderwerp is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
@@ -42,7 +42,7 @@
               <mat-form-field appearance="{{ generalContent.formStyle }}" color="{{ generalContent.formColor }}" class="w-100">
                 <mat-label>Bericht</mat-label>
                 <textarea matInput [(ngModel)]="model.text" name="text" id="text" #text="ngModel" required></textarea>
-                <mat-error [hidden]="text.valid || text.pristine">
+                <mat-error *ngIf="text.invalid">
                   Bericht is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
